5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1644_2446.log
== TEST (2019-04-12 23:51:25) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=2+3+4
if(senha % a //soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:51:47) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=2+3+4
if(senha % a //soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- EXECUTION TIME:
0.218071
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:52:21) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=1+5+6
if(senha % a //soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:52:41) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=1+5+6
if(senha % a //soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- EXECUTION TIME:
0.166592
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:53:26) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=1+5+6
if(senha % soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:53:40) 
-- CODE:
senha=int(input("senha: "))
a=123456
soma=1+5+6
if(senha % soma):
	print("acesso liberado")
else: 
	print("senha invalida")	
-- EXECUTION TIME:
0.179426
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:20:15) 
-- CODE:
senha=int(input("senha: "))
a=123456//100000=1
b=(123456//10000)%1000=2
c=(123456//1000)%100=3
d=(123456//100)%10=4
e=(123456//10)%10=5
f=123456%10=6
if(senha==soma):
	soma=(a+b+c+d+e+f)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 2
    a=123456//100000=1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:42) 
-- CODE:
senha=int(input("senha: "))
a=1234//1000=1
b=(1234//100)%10=2
c=(1234//10)%10=3
d=(1234//%10=4

if(senha==soma):
	soma=(a+b+c+d)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 5
    d=(1234//%10=4
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:22:59) 
-- CODE:
senha=int(input("senha: "))
a=1234//1000=1
b=(1234//100)%10=2
c=(1234//10)%10=3
d=1234//%10=4

if(senha==soma):
	soma=(a+b+c+d)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 5
    d=1234//%10=4
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:24:00) 
-- CODE:
senha=int(input("senha: "))
a=1234//1000=1
b=(1234//100) % 10=2
c=(1234//10 ) % 10=3
d=1234 % 10=4

if(senha==soma):
	soma=(a+b+c+d)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 2
    a=1234//1000=1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:24:53) 
-- CODE:
senha=int(input("senha: "))
a=1234 // 1000 = 1
b=(1234 // 100) % 10 = 2
c=(1234 // 10 ) % 10 = 3
d=1234 % 10 = 4

if(senha==soma):
	soma=(a+b+c+d)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 2
    a=1234 // 1000 = 1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:29:57) 
-- CODE:
n=int(input("senha:123456 "))
a=123456 // 100000 = 1
b=(123456 // 100000) % 10000 = 2
c=(123456 // 10000 ) % 100 = 3
d=(123456 % 100)%10 = 4
e=(123456//10)%10=5
f=123456%10=6

if(senha==soma):
	soma=(a+b+c+d+e+f)
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 2
    a=123456 // 100000 = 1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:34:44) 
-- CODE:
n=int(input("senha:123456 "))
a=123456 // 100000 = 1
b=(123456 // 100000) % 10000 = 2
c=(123456 // 10000 ) % 100 = 3
d=(123456 % 100)%10 = 4
e=(123456//10)%10=5
f=123456%10=6
soma=a + b + c + d + e + f
if(senha==soma):
	print("acesso liberado")
else:
	print("senha invalida")	
-- ERROR:
File "XXXX", line 2
    a=123456 // 100000 = 1
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:39) 
-- CODE:
n=int(input("senha:123456 "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n //100)%10 
e=(n//10)%10
f=n % 10
s=(b+d+f)
r=(a+c+e)
t=s//r
if(t*r==s):
	print("acesso liberado")
if(t*r!=s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:57) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n //100)%10 
e=(n//10)%10
f=n % 10
s=(b+d+f)
r=(a+c+e)
t=s//r
if(t*r==s):
	print("acesso liberado")
if(t*r!=s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:54:12) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n //100)%10 
e=(n//10)%10
f=n % 10
s=(b+d+f)
r=(a+c+e)
t=s//r
if(t*r==s):
	print("acesso liberado")
if(t*r!=s):
	print("senha invalida")	
-- EXECUTION TIME:
0.170139
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:55:25) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n // 100) % 10 
e=(n // 10) % 10
f=n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:55:41) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n // 100) % 10 
e=(n // 10) % 10
f=n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- EXECUTION TIME:
0.166972
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:56:15) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 100
d=(n // 100) % 10 
e=(n // 10) % 10
f=n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s)
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- ERROR:
File "XXXX", line 11
    if(t * r == s)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:56:41) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f=n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:56:54) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f=n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- EXECUTION TIME:
0.127951
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:08:24) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:08:46) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- EXECUTION TIME:
0.15813
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:08:53) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:09:12) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:09:25) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 100000) % 10 
c=(n // 10000 ) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- EXECUTION TIME:
0.173068
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:09:59) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 10000) % 10 
c=(n // 1000) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:10:18) 
-- CODE:
n=int(input("senha: "))
a=n // 100000 
b=(n // 10000) % 10 
c=(n // 1000) % 10
d=(n // 100) % 10 
e=(n // 10) % 10
f= n % 10
s=(b + d + f)
r=(a + c + e)
t=s//r
if(t * r == s):
	print("acesso liberado")
if(t * r != s):
	print("senha invalida")	
-- EXECUTION TIME:
0.238046
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
